--- a/app/src/main/res/layout/activity_router.xml
+++ b/app/src/main/res/layout/activity_router.xml
@@ -23,6 +23,9 @@
         <Button style="@style/NavigateButton"
             android:id="@+id/trace_fragment_transaction"/>
 
+        <Button style="@style/NavigateButton"
+            android:id="@+id/trace_heavy_method"/>
+
     </LinearLayout>
 
 </ScrollView>
